--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
 language: rust
+
 rust:
   - 1.36.0
   - stable
   - beta
   - nightly
+
 matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
+
+before_script:
+- rustup component add rustfmt
+
+script:
+- cargo build --verbose
+- cargo test --verbose
+- cargo fmt -- --check
